# git-zoxide

./: Cargo.toml  Makefile  README.md  config.yaml  install.sh
.github/workflows/: release.yml
files/: config.yaml
scripts/: _git-zoxide.zsh  init.zsh
src/: config.rs  errors.rs  main.rs  util.rs
src/api/: github.rs  gitlab.rs  mod.rs
src/cmd/: attach.rs  branch.rs  cd.rs  clean.rs  config.rs  detach.rs  home.rs  init.rs  jump.rs  list.rs  merge.rs  mod.rs  open.rs  rebase.rs  remove.rs  reset.rs  squash.rs  tag.rs
src/db/: mod.rs  repo.rs
