[package]
name = "git-zoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
bincode = "1.3.3"
clap = { version = "4.0.0", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.3"
dirs = "4.0.0"
fastrand = "1.9.0"
nix = "0.26.2"
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.9.19"
shellexpand = "3.0.0"
