[package]
name = "git-zoxide"
version = "0.2.0"
edition = "2021"
authors = ["fioncat <lazycat7706@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Yet another zoxide for git repositories"
homepage = "https://github.com/fioncat/git-zoxide"
keywords = ["cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fioncat/git-zoxide"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
bincode = "1.3.3"
clap = { version = "4.0.0", features = ["derive"] }
console = "0.15.5"
dialoguer = "0.10.3"
dirs = "4.0.0"
fastrand = "1.9.0"
gitlab = "0.1509.0"
nix = "0.26.2"
octocrab = "0.18.1"
open = "4.0.1"
openssl = { version = "0.10.47", features = ["vendored"] }
pad = "0.1.6"
regex = "1.7.2"
secrecy = "0.8.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.9.19"
shellexpand = "3.0.0"
tokio = "1.26.0"

[package.metadata.deb]
assets = [
    [
        "target/release/git-zoxide",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/git-zoxide/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/git-zoxide/",
        "644",
    ],
]
extended-description = "git-zoxide is yet another zoxide for git repositories"
priority = "optional"
section = "utils"
